[CHANGED]
Now MultiBlock Heat Exchanger has 3 texture to build.
TungstenSteel/Tungsten/Tantalum Hafnium Carbide.
They can output HU:16384/32768/131072.
[ADDED]Ethane for cracking product.
[ADDED]Frost Proof Machine Casing for Cryo Distillation Tower build.
[ADDED]Thermomechanical block for Heat Exchanger
[ADDED]Reactors can use Distilled Water as Coolant, but that uses a different System so beware.From Original GT6 Version
[ADDED]
Titanium Niobium Carbide.You can use it for crucible(And Large crucible)Large Boiler, tools pipe and tank.
Its pipe and tank can store plasma too.
[ADDED]
MultyBlock Engine Turbine.
Build like gas/steam turbine.It uses Engine fuels.Its a MultyBlock for Diesel Engine
[ADDED]
MultyBlock Plasma Turbine.
Build like gas/steam turbine.Uses plasma fuel!Plasma fuel has a very high turbine value.
And this is a new way that using fusion to make energy.
[ADDED]
MultyBlock Oil Cleaner.
3x3x3 Hallow with Clean StainlessSteel Machine Casing.
For processing in MultyBlock can get all Products than mixer.
And now DistillationTower will output dirty oil(Oil with S)So you need put in machine to get clean oil.
[ADDED]
MultyBlock Cracking Tower.
A little different for building.It need 3x3x10 Cracking Tower Part.
Cracking in Cracking Tower can get more products than single block cracking machine.
[ADDED]
MultyBlock Molecular Scanner.
Now Molecular Scanner only has MultyBlock Version.It can overcheap clocking and accept a high voltage energy.
[ADDED]
MultyBlock Large Matter Replicator.
MultyBlock version for Matter Replicator.It has 64 Parallel. 

6.12.021:
[CHANGED]Now Large Autoclave can accept energy.It can do 32 process at the same time too.
[CHANGED]Now Engine output be more.But they are no longer have 100%EFFICIENCY.
[ADDED]Tungsten Engine
[ADDED]
Autoclave(LV-IV)That use energy to work. 

*NOTE:For Original GT6 Version changelogs.You can see in this https://gregtech.overminddl1.com/changelog 