@@ -1255,7 +1255,7 @@ public class MT {
 	Nb2Ti3C4                = alloymachine  (27000, "Titanium Niobium Carbide"                      , 153, 153, 204, 255).put(MOLTEN).qual(3, 16.0, 7680, 4)                                                                                                            .uumMcfg( 0, Nb             , 3*U, Ti               , 3*U, C                , 4*U)                                                                          .aspects(TC.METALLUM, 2, TC.GELUM, 2).heat(4196).alloyCentrifuge(),
 	H3PO4                   = lqudaciddcmp  (27001, "Phosphoric Acid"       , SET_FLUID             , 255, 255,  61, 255).put(LIQUID)                                                                                                                                   .uumMcfg( 0, H              , 3*U, P                , 1*U, O                , 4*U)                                                                          .heat( 200,  400), PhosphoricAcid = H3PO4,
 	Ethene                  = create        (27002, "Ethene"                , SET_FLUID             ,  64,  40, 100, 255).put(LIQUID, EXPLOSIVE)                                                                                                                                                                                                                                                                                    .heat( 100,  200).aspects(TC.MORTUUS, 1, TC.POTENTIA, 1),
-	Naphtha                 = create        (27003, "Naphtha"               , SET_FLUID             ,  64,  40, 100, 255).put(LIQUID, EXPLOSIVE, FLAMMABLE)                                                                                                                                                                                                                                                                         .heat( 100,  200).aspects(TC.MORTUUS, 1, TC.POTENTIA, 1);
+	Naphtha                 = create        (27003, "Naphtha"               , SET_FLUID             , 255, 255, 102, 255).put(LIQUID, EXPLOSIVE, FLAMMABLE)                                                                                                                                                                                                                                                                         .heat( 100,  200).aspects(TC.MORTUUS, 1, TC.POTENTIA, 1);
 
 	
 	static {
